Updates from review

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -24,9 +24,7 @@
     <div class="container">
       <header class="row">
         <div class="col-xs-3">
-          <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="100" height="100"  viewBox="0 0 32 32">
-          <path class="logo" d="M10.031 32c-2.133-4.438-0.997-6.981 0.642-9.376 1.795-2.624 2.258-5.221 2.258-5.221s1.411 1.834 0.847 4.703c2.493-2.775 2.963-7.196 2.587-8.889 5.635 3.938 8.043 12.464 4.798 18.783 17.262-9.767 4.294-24.38 2.036-26.027 0.753 1.646 0.895 4.433-0.625 5.785-2.573-9.759-8.937-11.759-8.937-11.759 0.753 5.033-2.728 10.536-6.084 14.648-0.118-2.007-0.243-3.392-1.298-5.312-0.237 3.646-3.023 6.617-3.777 10.27-1.022 4.946 0.765 8.568 7.555 12.394z"></path>
-          </svg>
+          <img class="logo center-block img-responsive" width="125px;" src="img/logo.svg" alt="Logo image">
         </div>
         <div class="col-xs-9 text-right text-uppercase">
           <h1>Tim Heuermann</h1>
@@ -35,14 +33,20 @@
       </header>
     </div>
     <div class="container-fluid">
-      <hr />
-      <img class="center-block img-responsive" src="https://unsplash.it/2000/600" alt="Hero Image" />
+      <section class="row">
+        <div class="col-xs-12">
+          <hr>
+          <img class="center-block img-responsive" src="https://unsplash.it/2000/600" alt="Hero Image" />
+        </div>
+      </section>
     </div>
     <div class="container">
       <section class="row">
-        <h2 class="feature-title">Featured Work</h2>
+        <div class="col-xs-12">
+          <h2 class="feature-title">Featured Work</h2>
+        </div>
         <article class="col-lg-4 col-xs-12 col-sm-6 text-center">
-          <img class="center-block img-responsive pointer img-rounded" src="img/movie-trailers.jpg" alt="Screenshot from Movie Trailer Site" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample"/>
+          <img class="center-block img-responsive pointer img-rounded" src="img/movie-trailers.jpg" alt="Screenshot from Movie Trailer Site" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
           <div class="collapse" id="collapseExample">
             <p class="description">
               This python program creates a webpage with a list of 6 movies including the title, a description, the poster image, and the trailer for each film.
@@ -54,7 +58,7 @@
           </p>
         </article>
         <article class="col-lg-4 col-xs-12 col-sm-6 text-center">
-          <img class="center-block img-responsive pointer img-rounded" src="https://unsplash.it/350/250" alt="Unsplash Image Placeholder" data-toggle="collapse" data-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample2"/>
+          <img class="center-block img-responsive pointer img-rounded" src="https://unsplash.it/350/250" alt="Unsplash Image Placeholder" data-toggle="collapse" data-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample2">
           <div class="collapse" id="collapseExample2">
             <p>
               This is a description for the second project item
@@ -66,7 +70,7 @@
           </p>
         </article>
         <article class="col-lg-4 col-xs-12 col-sm-6 text-center">
-          <img class="center-block img-responsive pointer img-rounded" src="https://unsplash.it/350/250?random" alt="Unsplash Image Placeholder 2" data-toggle="collapse" data-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample3"/>
+          <img class="center-block img-responsive pointer img-rounded" src="https://unsplash.it/350/250?random" alt="Unsplash Image Placeholder 2" data-toggle="collapse" data-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample3">
           <div class="collapse" id="collapseExample3">
             <p>
               This is a description for the third project item
